APP-31: Address local review — publish-before-mutate fix, FQCN cleanup
- OrchestratorResponseListener: move correlation re-registration AFTER
  successful cluster offer (publish-before-mutate consistency)
- FixSessionHandler: replace inline FQCNs with imports (StandardCharsets,
  BusinessRejectReason)
- FixGateway.NoOpSessionHandler: replace inline FQCNs with imports (Action,
  DirectBuffer, OnMessageInfo, DisconnectReason)
- FixGatewayTest: replace inline FQCNs with imports (ExecutionReportEncoder,
  Action), replace Collections.singletonList with List.of

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>